@@ -16,7 +16,6 @@ Specifically, the GPL parts of FFmpeg are
   libavcodec/x86/h264_deblock_sse2.asm
   libavcodec/x86/h264_idct_sse2.asm
   libavcodec/x86/idct_mmx.c
-- the AC-3 decoder in libavcodec/ac3dec.c
 - the X11 grabber in libavdevice/x11grab.c
 
 Some external libraries, e.g. libx264, are under GPL and can be used in
